test/cases/parser/Ref3.errors
src/Ref3.b:5:15: Syntax error (expected '=')
