test/cases/parser/Ref3.b
module Ref3
interface {
  function f()
  {
    ref x: i32;
  }
}
